welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: type mismatch;
 found   : Int
 required: Boolean
  if (a % 3) {
        ^fizzBuzz:3: error: type mismatch;
 found   : Int
 required: Boolean
    if (a % 5) {
          ^fizzBuzz:8: error: type mismatch;
 found   : Int
 required: Boolean
  if (a % 5) {
        ^